--- a/kubernetes/deployments/property-service-deployment.yml
+++ b/kubernetes/deployments/property-service-deployment.yml
@@ -5,19 +5,23 @@ metadata:
   label:
     app: property-service
 spec:
-  incomplete:
+  selector:
+    matchLabels:
+      app: property-service
   template:
-    incomplete:
+    metadata:
+      labels:
+        app: property-service
     spec:
       containers:
         - name: property-service
           image: property-service
           imagePullPolicy: ifNotPresent
-          incomplete:
+          ports:
+            - containerPort: 9091
           env:
             - name: BPL_JVM_THREAD_COUNT
               value: "50"
-
             - name: SPRING_PROFILES_ACTIVE
               value: testdata
           notcomplete:
