modified the deployment manifest of the property service to make Kubernetes wait for 5 seconds before shutting down after sending a SIGTERM signal to the pod

--- a/kubernetes/deployments/property-service-deployment.yml
+++ b/kubernetes/deployments/property-service-deployment.yml
@@ -17,6 +17,10 @@ spec:
         - name: property-service
           image: property-service
           imagePullPolicy: ifNotPresent
+          lifecycle:
+            preStop:
+              exec:
+                command: ["sh", "-c", "sleep 5"]
           ports:
             - containerPort: 9091
           env:
