--- a/kubernetes/resources/property-mongodb-configMap.yml
+++ b/kubernetes/resources/property-mongodb-configMap.yml
@@ -1,7 +1,8 @@
-apiVersion: v1
-kind: ConfigMap
+apiVersion : v1
+kind : ConfigMap
 metadata:
-  name: property-mongodb-configmap
+  name : property-mongodb-configmap
 data:
-  host: property-mongodb-service
-  database: propertydatabase
+  host : property-mongodb-service
+  port : "27017"
+  database : propertydatabase
