--- a/property/src/main/resources/application.yml
+++ b/property/src/main/resources/application.yml
@@ -10,8 +10,8 @@ server:
 spring:
   data:
     mongodb:
-      uri: localhost:27017
-      database: propertydatabase
+      host: ${host}
+      database: ${database}
 
 
 
