--- a/kubernetes/resources/property-mongodb-statefulset.yml
+++ b/kubernetes/resources/property-mongodb-statefulset.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: property-mongodb
 spec:
-  replicas: 3
+  replicas: 2
   serviceName: property-mongodb-service
   selector:
     matchLabels:
@@ -20,10 +20,17 @@ spec:
           image: mongo:4.4
           ports:
             - containerPort: 27017
+          resources:
+            limits:
+              cpu: "1"
+              memory: "200Mi"
+            requests:
+              cpu: "500m"
+              memory: "100Mi"
           volumeMounts:
-            - name: mongo-data
+            - name: property-pvc
               mountPath: /data/db
-            - name: mongo-config
+            - name: property-pvc
               mountPath: /etc/mongo
               readOnly: true
           command:
@@ -31,26 +38,25 @@ spec:
             - "--config"
             - "/etc/mongo/mongod.conf"
           env:
-            - name: MONGO_ROOT_USERNAME
+            - name: MONGO_INIT_ROOT_USERNAME
               valueFrom:
                 secretKeyRef:
-                  name: mongo-secret
+                  name: property-mongodb-secret
                   key: username
-            - name: MONGO_ROOT_PASSWORD
+            - name: MONGO_INIT_ROOT_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: mongo-secret
+                  name: property-mongodb-secret
                   key: password
       volumes:
-        - name: property-mongodb-configmap
+        - name: property-pvc
           configMap:
             name: property-mongodb-configmap
   volumeClaimTemplates:
     - metadata:
-        name: property-mongodb-data
+        name: property-pvc
       spec:
         accessModes: [ "ReadWriteOnce" ]
-        storageClassName: property-mongodb-storage
         resources:
           requests:
-            storage: 10Gi
+            storage: 100Mi
