--- a/kubernetes/resources/property-deployment.yml
+++ b/kubernetes/resources/property-deployment.yml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: property
 spec:
-  replicas: 3
+  replicas: 4
   selector:
     matchLabels:
       app: property
@@ -14,9 +14,16 @@ spec:
     spec:
       containers:
         - name: property
-          image: property-image:latest
+          image: docker.io/theblackengineer/property:0.0.0
           ports:
             - containerPort: 9090
+          resources:
+            limits:
+              cpu: "1"
+              memory: "200Mi"
+            requests:
+              cpu: "500m"
+              memory: "100Mi"
           envFrom:
             - configMapRef:
                 name: property-configmap
