--- a/kubernetes/resources/property/property-configmap.yml
+++ b/kubernetes/resources/property/property-configmap.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: property-configmap
+  name: property-config
 data:
   host: property-service
   port: "27017"
-  database: propertydatabase
+  database: PropertyDatabase
