--- a/kubernetes/resources/property/property-mongodb-configmap.yml
+++ b/kubernetes/resources/property/property-mongodb-configmap.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: property-mongodb-configmap
+  name: property-mongodb-config
 data:
   host: property-mongodb-service
   port: "27017"
