added the getPendingProperties method

--- a/kubernetes/resources/edge/edge-mongodb-statefulset.yml
+++ b/kubernetes/resources/edge/edge-mongodb-statefulset.yml
@@ -47,7 +47,7 @@ spec:
       volumes:
         - name: edge-pvc
           configMap:
-            name: edge-mongodb-configmap
+            name: edge-mongodb-config
   volumeClaimTemplates:
     - metadata:
         name: edge-pvc
