--- a/kubernetes/resources/property/property-mongodb-statefulset.yml
+++ b/kubernetes/resources/property/property-mongodb-statefulset.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: property-mongodb
 spec:
-  replicas: 2
+  replicas: 3
   serviceName: property-mongodb-service
   selector:
     matchLabels:
@@ -16,7 +16,7 @@ spec:
         app: property-mongodb
     spec:
       containers:
-        - name: property-mongo
+        - name: property-mongodb
           image: mongo:4.4
           ports:
             - containerPort: 27017
@@ -47,7 +47,7 @@ spec:
       volumes:
         - name: property-pvc
           configMap:
-            name: property-mongodb-configmap
+            name: property-mongodb-config
   volumeClaimTemplates:
     - metadata:
         name: property-pvc
