--- a/property/src/main/resources/application.yml
+++ b/property/src/main/resources/application.yml
@@ -1,10 +1,34 @@
-spring:
-  data:
-    mongodb:
-      uri: mongodb://localhost:27017/PropertyDatabase
-
-
-
+# common environment configuration
 server:
   port: 9090
   shutdown: graceful
+
+spring:
+  application:
+    name: PropertyApplication
+
+# development environment configuration
+  profile: dev
+  data:
+    mongo:
+      host: localhost
+      port: 27017
+      database: PropertyDatabase
+
+# staging environment configuration
+---
+  profile: staging
+  data:
+    mongo:
+      host: localhost
+      port: 27017
+      database: PropertyDatabase
+
+# production environment configuration
+---
+  profile: production
+  data:
+  mongo:
+    host: property-mongodb-service
+    port: 27017
+    database: PropertyDatabase
