--- a/edge/src/main/resources/application.yml
+++ b/edge/src/main/resources/application.yml
@@ -1,16 +1,85 @@
 server:
   port: 9091
   shutdown: graceful
+  error:
+    include-message: always
+    ssl:
+      enabled: false
+
+  data:
+    mongo:
+      host: localhost
+      port: 27017
+      database: EdgeDatabase
+
+
+logging:
+  level:
+    org.springframework.security: DEBUG
+
+
+scheme: http
+origins: http://localhost:8888
+keycloak-port: 8888
+keycloak-issuer: http://localhost:8888/realms/houseowner
 
 spring:
   security:
     oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8888/realms/houseowner
       client:
-        registration:
-          keycloak:
-            clientId: edge-service
-            clientSecret: houseowner-keycloak-secret
-            scope: openid
         provider:
           keycloak:
-            issuerUri: http://localhost:8080/realms/Houseowner
+            issuer-uri: http://localhost:8888/realms/houseowner
+          keycloak-client:
+            client-id: EdgeApplication
+            #client-secret: [ CLIENT_SECRET ] # Replace with your Keycloak client secret
+            #scope: [ SCOPE1, SCOPE2, ... ] # Replace with the required scopes for your application (comma-separated list)
+            scope: openid,profile,email,resource.read
+
+  application:
+    name: Edge-Service
+
+
+spring-addons:
+  issuers:
+    - uri: http://localhost:8888/realms/houseowner
+      username-json-path: $.preferred_username
+      claims:
+        - jsonPath: $.realm_access.roles
+        - jsonPath: $.resource_access.*.roles
+
+realm: houseowner
+keycloak:
+  server:
+    url: http://localhost:8888
+
+
+twilio:
+  account_sid: AC8797b8b123d9e5cbe4892b54c51083d2
+  auth_token: 3c3828fd981c77602fd1688dec6fbee5
+  trial_number: +18786458537
+
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+    instance:
+    preferIpAddress: true
+
+---
+scheme: https
+keycloak-port: 9092
+
+server:
+  ssl:
+    enabled: true
+
+spring:
+  config:
+    activate:
+      on-profile: ssl
+
