--- a/OTPData/src/main/resources/application.yml
+++ b/OTPData/src/main/resources/application.yml
@@ -6,21 +6,48 @@ server:
     ssl:
       enabled: false
 
+  data:
+    mongo:
+      host: localhost
+      port: 27018
+      database: OTPDatabase
+
 
 logging:
   level:
     org.springframework.security: DEBUG
 
 
+scheme: http
+origins: http://localhost:8888
+keycloak-port: 8888
+keycloak-issuer: http://localhost:8888/realms/houseowner
+
 spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8888/realms/houseowner
+
   application:
     name: OTP-Data-Service
 
-  data:
-    mongo:
-      host: localhost
-      port: 27018
-      database: OTPDatabase
+
+
+spring-addons:
+  issuers:
+    - uri: http://localhost:8888/realms/houseowner
+      username-json-path: $.preferred_username
+      claims:
+        - jsonPath: $.realm_access.roles
+        - jsonPath: $.resource_access.*.roles
+
+realm: houseowner
+keycloak:
+  server:
+    url: http://localhost:8888
+
 
 eureka:
   client:
@@ -28,4 +55,18 @@ eureka:
       defaultZone: http://localhost:8761/eureka
     instance:
     preferIpAddress: true
+
+
+---
+scheme: https
+keycloak-port: 9092
+
+server:
+  ssl:
+    enabled: true
+
+spring:
+  config:
+    activate:
+      on-profile: ssl
 
