added otp data service to store otps

--- a/edge/src/main/resources/application.yml
+++ b/edge/src/main/resources/application.yml
@@ -40,7 +40,7 @@ spring:
             scope: openid,profile,email,resource.read
 
   application:
-    name: Edge-Service
+    name: Edge-Application-Service
 
 
 spring-addons:
