--- a/property/src/main/resources/application.yml
+++ b/property/src/main/resources/application.yml
@@ -31,7 +31,7 @@ spring:
           issuer-uri: http://localhost:8888/realms/houseowner
 
   application:
-    name: Property-Service
+    name: Property-Application-Service
 
 
 
