--- a/property/pom.xml
+++ b/property/pom.xml
@@ -35,6 +35,18 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.pulsar</groupId>
+			<artifactId>pulsar-client-reactive-adapter</artifactId>
+			<version>0.3.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.pulsar</groupId>
+			<artifactId>pulsar-client-reactive-producer-cache-caffeine</artifactId>
+			<version>0.3.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 		</dependency>
