--- a/ui/houseowner/pubspec.yaml
+++ b/ui/houseowner/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^1.1.0
+  rxdart: ^0.27.7
+  pulsar_iot_client: ^1.0.3
+  flutter_animate: ^4.2.0+1
 
 dev_dependencies:
   flutter_test:
